service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-failure-flags-service
spec:
  selector:
    app: s3-failure-flags-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
