ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-failure-flags-app-ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-node-labels: kubernetes.io/os=linux
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3-failure-flags-app
            port:
              number: 8080
